<resources>
    <string name="app_name">NMedia</string>
    <string name="textnmedia">NMedia!</string>
    <string name="description_post_author_avatar">Post author avatar</string>
    <string name="description_post_menu">Post menu</string>
    <string name="description_like">Number of likes</string>
    <string name="description_view">Number of views</string>
    <string name="description_share">Numbers of shares</string>

    <string name="description_post_like">Like</string>
    <string name="description_edit" translatable="false">Edit</string>
    <string name="description_post_share">Share</string>
    <string name="description_post_save">Save</string>
    <string name="menu_remove">Remove</string>
    <string name="post_text">Post Text</string>
    <string name="menu_edit">Edit</string>
    <string name="chooser_share_post">Share post</string>
    <string name="error_empty_content">Content can\'t be empty</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>