<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="32dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_editor_absoluteX="-16dp"
        tools:listitem="@layout/card_post" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/groupEditView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            app:constraint_referenced_ids="editIcon,editLabel,contentPreviewLabel,cancelButton"
            />

<!--    <androidx.constraintlayout.widget.Barrier-->
<!--        android:id="@+id/toolsTop"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:barrierDirection="top"-->
<!--        app:constraint_referenced_ids="content"-->
<!--        />-->


    <ImageView
        android:id="@+id/editIcon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:focusable="false"
        android:importantForAutofill="no"
        android:longClickable="false"
        android:contentDescription="@string/description_edit"
        android:src="@drawable/baseline_edit_24"

        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintStart_toStartOf="@id/content" />

    <TextView
        android:id="@+id/editLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="Редактирование"
        android:textColor="#03A9F4"
        android:textStyle="bold"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="@id/editIcon"
        app:layout_constraintEnd_toStartOf="@id/cancelButton"
        app:layout_constraintStart_toEndOf="@id/editIcon" />

    <TextView
        android:id="@+id/contentPreviewLabel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintEnd_toEndOf="@id/editLabel"
        app:layout_constraintStart_toStartOf="@id/editLabel"
        app:layout_constraintTop_toBottomOf="@id/editLabel" />


    <ImageButton
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:background="@android:color/white"
        android:contentDescription="@string/description_view"
        app:srcCompat="@drawable/ic_cancel_48"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/content"
        />

    <EditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:hint="@string/post_text"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:padding="@dimen/common_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/saveButton"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:contentDescription="@string/description_post_like"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/content"
        app:srcCompat="@drawable/ic_save_48" />
</androidx.constraintlayout.widget.ConstraintLayout>